# Headerizer

./: .gitignore  README.md  cli.py  config.py  processor.py  pyproject.toml  utils.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
scripts/: test.sh
src/headerizer/: __init__.py  cli.py  config.json  config.py  processor.py  utils.py
tests/: test_git_integration.py  test_header_insertion.py  test_ignore_patterns.py
tests/unit/: test_git_integration.py  test_header_insertion.py  test_ignore_patterns.py
